# simonsays

./: CMakeLists.txt  ENROLL.md  README.md  build.cmd  build.ps1  run.cmd  run.ps1
secure/: secure_mode_helper.cc  secure_mode_helper.h
src/: main.cpp
